fix budget bar overflow

--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ height:45px;
 #budgetbar {
 position:absolute;
 top:29px;
-left:310px;
+left:273px;
 width:830px;
 height:20px;
 }
